--- a/InternetCafe/Properties/Resources.resx
+++ b/InternetCafe/Properties/Resources.resx
@@ -118,7 +118,16 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="100px-Tome_of_knowledge_hi_res" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\100px-Tome_of_knowledge_hi_res.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="266323381_436336721265054_4318405658084075166_n" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\266323381_436336721265054_4318405658084075166_n.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="WIN_20220114_13_56_37_Pro" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\WIN_20220114_13_56_37_Pro.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Black_open_book" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Black_open_book.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
